crates/layout/tests/snapshots/snapshots__snapshot_small_doc_three_kinds.snap
---
source: crates/layout/tests/snapshots.rs
expression: summarize(&result)
---
page_count: 1
blocks:
  - page_index: 0
    block_index: 0
    kind: Heading-1
    line_count: 1
    height_px_round: 58
    origin_x_px_round: 0
  - page_index: 0
    block_index: 1
    kind: Paragraph
    line_count: 1
    height_px_round: 26
    origin_x_px_round: 0
  - page_index: 0
    block_index: 2
    kind: ListItem-0
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 24
  - page_index: 0
    block_index: 3
    kind: ListItem-1
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 40
  - page_index: 0
    block_index: 4
    kind: ListItem-0
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 24
